--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,14 @@
     -ms-overflow-style: none;
 }
 
+#app {
+    display: flex;
+    height: 100%;
+    width: 100%;
+    flex-direction: column;
+    overflow: hidden;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -25,5 +33,3 @@ button {
     border: none;
     cursor: pointer;
 }
-
-
